--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "expo": "~44.0.0",
-    "expo-av": "^10.2.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^48.0.0",
+    "expo-av": "~13.2.1",
+    "expo-status-bar": "~1.4.4",
     "marked": "^4.0.8",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "0.17.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
